@@ -1,0 +1,10 @@
+#!/bin/sh
+JAVA=java
+#JAVA=/opt/kaffe/bin/kaffe
+#JAVA=/usr/local/kaffe117/bin/kaffe
+#JAVA=/u1/gcc-4.2-20060520-x86_64/bin/gij
+LOC=`which $0`
+SYNDIEBINDIR=`dirname ${LOC}`
+SYNDIELIBDIR=${SYNDIEBINDIR}/../lib
+SWTLIBDIR=${SYNDIEBINDIR}/../../swt-I20060602-1317-gtk-linux-x86
+$JAVA -cp ${SYNDIELIBDIR}/syndie.jar:${SYNDIELIBDIR}/hsqldb.jar:${SWTLIBDIR}/swt.jar -Djava.library.path=${SWTLIBDIR} syndie.gui.MessageTab $@
