@@ -16,10 +16,13 @@ debug.test.classpath=\
 dist.dir=dist
 dist.jar=lib/syndie.jar
 dist.javadoc.dir=dist/javadoc
+swt.dir=../swt-I20060602-1317-gtk-linux-x86
 file.reference.hsqldb.jar=lib/hsqldb.jar
+file.reference.swt.jar=${swt.dir}/swt.jar
 jar.compress=false
 javac.classpath=\
-    ${file.reference.hsqldb.jar}
+    ${file.reference.hsqldb.jar}:\
+    ${file.reference.swt.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
